<resources>
    <string name="app_name">Maréu</string>
    <string name="action_settings">Settings</string>

    <string name="members_mails">mails of members</string>
    <string name="sujet">about meetup </string>
    <string name="save">SAVE</string>
    <string name="Add_error">please fill in all fields </string>


    <string-array name="room">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
    </string-array>

    <string name="filter_by_place"><![CDATA[filter by place ->]]></string>
    <string name="filter_by_date"><![CDATA[filter by date ->]]></string>
    <string name="filter_by_time"><![CDATA[filter by time ->]]></string>
    <string name="call_off_filters"><![CDATA[call off filters ->]]></string>

<string name="negative_button">Cancel</string>
<string name="positive_button">Filter</string>



    <string name="remouveDialog">Are you sure you want remove this meetup from list!?</string>
    <string name="tittleRemouve"> </string>
<string name="remouveIt">remove</string>

</resources>


