<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddNewMeetup">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/aboutMeetup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sujet" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/textSizeForDescription"
        android:layout_alignParentStart="true"
android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/textTop"
        android:layout_marginStart="@dimen/textSide"
        />
    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/textSizeForDescription"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/textTop"
        android:layout_marginEnd="@dimen/textSide"
        />



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/cardViewTop"
        android:layout_marginStart="@dimen/textSide"
        android:layout_marginEnd="@dimen/textSide">

        <ImageButton
            android:id="@+id/imageButtonTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/ic_access_time_black_24dp"
            android:background="@color/cardview_shadow_end_color" />

        <Spinner
            android:id="@+id/room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spinerMarStart"

            />


        <ImageButton
            android:id="@+id/imageButtonDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_today_black_24dp"
            android:background="@color/cardview_shadow_end_color" />


    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutForMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView"
        android:layout_marginTop="@dimen/textInputLayoutForMembers">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/membersMails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/members_mails"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutForMembers"
       android:layout_centerHorizontal="true"
        android:text="@string/save"
        />

</RelativeLayout>
</ScrollView>